Fixed a grid layout issue and add some media quaries

--- a/src/components/aboutUsComponent/aboutUsComponent.module.css
+++ b/src/components/aboutUsComponent/aboutUsComponent.module.css
@@ -3,7 +3,7 @@
     grid-template-areas:
         ". aboutUs ."
         "focusContainer focusContainer focusContainer";
-    grid-template-columns: auto 78.4375% auto;
+    grid-template-columns: 10.78125% 78.4375% 10.78125%;
     grid-template-rows: auto auto;
     width: 100%;
 }
@@ -83,15 +83,30 @@
 .mapIcon {
     flex-grow: 1;
     align-self: center;
+    max-width: 105px;
 }
+
+.mapIconImage {
+    width: 100%;
+    height: auto;
+}
+
 .directionText {
     flex-grow: 3;
     align-self: center;
+    text-align: center;
 }
+
 .linkArrow {
     flex-grow: 1;
     align-self: center;
     text-align: center;
+    max-width: 45px;
+}
+
+.arrowImage {
+    width: 100%;
+    height: auto;
 }
 
 .subHeading1 {
@@ -187,7 +202,7 @@
 }
 
 .ourFocusContainer {
-    max-width: 1920px; /* Need to set max width here to work properly in Firefox*/
+    /* max-width: 1920px;  */
     grid-area: focusContainer;
     display: grid;
     grid-template-areas:
@@ -236,20 +251,23 @@
     flex-wrap: nowrap;
 }
 
-.focusCardArea {
+.focusCards {
     grid-area: focusCardArea;
+    margin-top: 4%;
+}
+
+.sliderContainer {
     white-space: nowrap;
     overflow-x: scroll;
     scrollbar-width: none;
     scroll-behavior: smooth;
-    margin-top: 4%;
 }
 
-.focusCardArea::-webkit-scrollbar {
+.sliderContainer::-webkit-scrollbar {
     display: none;
 }
 
-.sliderContainer {
+.slider {
     position: relative;
     display: flex;
     align-items: center;
@@ -284,4 +302,64 @@
     height: auto;
     fill: white;
     opacity: 1;
+}
+
+@media (max-width: 1366px) {
+    .mapTextInfo {
+        margin-right: 30%;
+    }
+    .missionImageContainer {
+        max-width: 68px;
+    }
+
+    .brefingText {
+        font: normal normal bold 38px/45px Raleway;
+        max-width: 90%;
+    }
+
+    .missionText {
+        font: normal normal normal 28px/44px Raleway;
+    }
+}
+
+@media (max-width: 1024px) {
+    .map {
+        width: 90%;
+    }
+
+    .mapTextInfo {
+        margin-right: 15%;
+    }
+
+    .linkArrow {
+        max-width: 40px;
+    }
+
+    .mapIcon {
+        max-width: 100px;
+    }
+
+    .missionImageContainer {
+        max-width: 48px;
+    }
+
+    .brefingText {
+        font: normal normal bold 34px/41px Raleway;
+        max-width: 90%;
+    }
+
+    .missionText {
+        font: normal normal normal 24px/40px Raleway;
+    }
+
+    .directionHeading {
+        font: normal normal bold 28px/33px Raleway;
+    }
+
+    .directionSubHeading {
+        font: normal normal bold 17/21px Raleway;
+    }
+}
+
+@media (max-width: 768px) {
 }
